Fix warnings for generic usage